remove debug info. add desaturation effect. fix z-index. add link(again) from start page to project

--- a/app/assets/stylesheets/elements/projects-index.scss
+++ b/app/assets/stylesheets/elements/projects-index.scss
@@ -6,6 +6,7 @@
 
   position: fixed;
   background-color: white;
+  z-index: 5;
 
   box-sizing: border-box;
   width:100%;
